--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,9 @@ Title: Censored Likelihood Multiple Imputation for Single-Pollutant Models
 Version: 1.0.0
 URL: https://github.com/umich-cphds/lodmi
 BugReports: https://github.com/umich-cphds/lodmi/issues
-Author: Jonathan Boss
-Maintainer: Jonathan Boss <bossjona@umich.edu>
+Authors@R: c(
+    person("Jonathan", "Boss", email = "bossjona@umich.edu", role = c("aut")),
+    person("Alexander", "Rix", email = "alexrix@umich.edu", role = c("cre")))
 Description: Impute observed values below the limit of detection (LOD) via
     Censored likelihood Multiple Imputation (CLMI) in single-pollutant
     models. CLMI handles exposure detection limits that may change throughout
