--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Description: Impute observed values below the limit of detection (LOD) via
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-Imports: stats
+Depends: R (>= 3.1.0)
+Imports: stats, rlang (>= 0.3.0)
 RoxygenNote: 6.1.1
 Suggests:
     knitr,
