--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(
     person("Jonathan", "Boss", email = "bossjona@umich.edu", role = c("aut")),
     person("Alexander", "Rix", email = "alexrix@umich.edu", role = c("cre")))
 Description: Impute observed values below the limit of detection (LOD) via
-    Censored likelihood Multiple Imputation (CLMI) in single-pollutant
+    censored likelihood multiple imputation (CLMI) in single-pollutant
     models, developed by Boss et al (2019) <doi:10.1097/EDE.0000000000001052>.
     CLMI handles exposure detection limits that may change throughout the course
     of exposure assessment. 'lodi' provides functions for imputing and
