--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: lodi
 Type: Package
 Title: Limit of Detection Imputation for Single-Pollutant Models
-Version: 0.9.0
+Version: 0.9.1
 URL: https://github.com/umich-cphds/lodmi
 BugReports: https://github.com/umich-cphds/lodmi/issues
 Authors@R: c(
     person("Jonathan", "Boss", email = "bossjona@umich.edu", role = c("aut")),
-    person("Alexander", "Rix", email = "alexrix@umich.edu", role = c("cre")))
+    person("Alexander", "Rix", email = "alexrix@umich.edu", role = c("aut", "cre")))
 Description: Impute observed values below the limit of detection (LOD) via
     censored likelihood multiple imputation (CLMI) in single-pollutant
     models, developed by Boss et al (2019) <doi:10.1097/EDE.0000000000001052>.
