--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Depends: R (>= 3.1.0)
 Imports: stats, rlang (>= 0.3.0)
 RoxygenNote: 6.1.1
 Suggests:
+    testthat,
     knitr,
     rmarkdown
 VignetteBuilder: knitr
